Fix coauthor defaults to n0

--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,8 @@ TARGET_REPO=your-username/your-repo
 
 # Coauthor for Pair Extraordinaire achievement
 # These appear in commit messages as "Co-authored-by: Name <email>"
-COAUTHOR_NAME=Carter2565
-COAUTHOR_EMAIL=Carter@carter2565.dev
+COAUTHOR_NAME=n0
+COAUTHOR_EMAIL=luke@u.software
 
 # Branch prefix for created branches (default: achievement)
 BRANCH_PREFIX=achievement
